# Embedded-Easy-Lab

lab-linux-driver/: .gitignore
lab-linux-driver/gpio/: CMakeLists.txt  main.c
lab-linux-driver/gpio-user/: CMakeLists.txt  main.cpp
lab-linux-driver/hello_world/: CMakeLists.txt  main.c
lab-qt/: .gitignore
lab-qt/guess/: guess.pro  guess_server.hpp  main.cpp  main_window.cpp  main_window.h  main_window.ui
lab-socket/client/: CMakeLists.txt  main.c
lab-socket/server/: CMakeLists.txt  main.c
lab-start/: setup_network.sh
